# Safelight

./: .eslintrc.cjs  .eslintrc.json  .gitignore  .gitmodules  .npmrc  .prettierignore  .prettierrc  Cargo.toml  LICENSE  README.md  auto-imports.d.ts  components.d.ts  eslint.config.mjs  eslint.config.ts  global.d.ts  globals.d.ts  index.html  package.json  pnpm-lock.yaml  renovate.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.test.json  tsconfig.workers.json  uno.config.ts  vite.config.ts  vitest.config.ts  vitest.workspace.json  vitest.workspace.ts
.github/: dependabot.yml  renovate.json5
.github/workflows/: build.yml  ci.yml  dependabot_batcher.yml  lint.yml  test.yml  vitest.yml
buildscripts/: generatePackageList.ts
crates/sl-binding/: Cargo.toml
crates/sl-binding/src/: lib.rs
crates/sl-binding/src/media_bin/: media_bin.rs  mod.rs
crates/sl-binding/src/project/: project.rs
crates/sl-binding/src/timeline/: mod.rs  timeline.rs  timeline_item.rs  timeline_properties.rs
crates/sl-binding/src/utils/: logger.rs  mod.rs
crates/sl-common/: Cargo.toml
crates/sl-common/src/: lib.rs
crates/sl-common/src/media_bin/: media_bin.rs  media_bin_item.rs  mod.rs
crates/sl-common/src/project/: project.rs
crates/sl-common/src/types/: bin_path.rs  mod.rs
crates/sl-core/: Cargo.toml
crates/sl-core/src/: lib.rs
crates/sl-core/src/asset/: asset.rs  asset_types.rs  mod.rs
crates/sl-core/src/effects/: base_effect.rs  mod.rs
crates/sl-core/src/effects/image_effects/: mod.rs
crates/sl-core/src/media/: media.rs  media_types.rs  mod.rs
crates/sl-core/src/media_bin/: media_bin.rs  media_bin_item.rs
crates/sl-core/src/project/: project.rs
crates/sl-core/src/storage/: storage.rs
crates/sl-core/src/timeline/: mod.rs  timeline.rs  timeline_item.rs
crates/sl-core/src/timeline/source/: image_source.rs  mod.rs
crates/sl-core/src/types/: asset_path.rs  bin_path.rs  image.rs  mod.rs
crates/sl-core/src/utils/: asset_path.rs  asset_path_namespace.rs  mod.rs
patches/: vue-i18n@9.13.1.patch
src/: App.vue  main.ts  style.scss
src/@core/Safelight/: index.js
src/@core/components/: SLButton.vue  SLCard.vue  SLList.vue  SLPane.vue  SLSplitPanes.vue
src/components/: Lazy.vue
src/components/Editor/: Monitor.vue
src/controllers/Compiler/: EsbuildScriptCompiler.ts
src/controllers/Media/: Media.ts
src/controllers/Project/: SimpleProject.ts
src/controllers/Storage/: IndexDbStorage.ts  db.ts
src/controllers/Timeline/: SimpleTimeline.ts
src/helpers/: Timecode.ts
src/router/: index.ts
src/stores/: useProject.ts
src/views/: Editor.vue  HomeView.vue  index.vue
src/workers/: tsconfig.worker.json  workers.d.ts
types/: arraybuffer.d.ts  captureStream.d.ts  i18n.d.ts  mp4box.d.ts  packages.d.ts  webkitAudioContext.d.ts
(+50 files in other folders)
