[package]
name = "sl-binding"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.56"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"

sl-core = { workspace = true }

[dependencies.getrandom]
version = "*"
features = ["js"]

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
demangle-name-section = true
dwarf-debug-info = true
