[package]
name = "sl-binding"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
sl-core = { workspace = true }

wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.56"
serde = { version = "1.0.228", features = ["derive"] }
tsify = { version = "0.5.6", features = ["js"] }

[dependencies.getrandom]
version = "*"
features = ["js"]
