[package]
name = "sl-binding"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
debugging = ["console_error_panic_hook"]

[dependencies]
sl-core = { workspace = true }

wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.56"
serde = { version = "1.0.228", features = ["derive"] }
tsify = { version = "0.5.6", features = ["js"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
log = { version = "0.4.29", features = ["release_max_level_info"] }

[dependencies.getrandom]
version = "*"
features = ["js"]
