[package]
name = "sl-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arcstr = { version = "1.2.0", features = ["std"] }
bitflags = { version = "2.10.0", features = ["std"] }
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["macros", "sync", "test-util"] }
uuid = { version = "1.19.0", features = ["v4"] }
